--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ nav li {
 
 .profile-photo {
     width: 150px;
+    height: 150px;
+     object-fit: cover;
     border-radius: 50%;
     float: left;
     margin-right: 1rem;
