didn't like previous work on <h3> and <p>, made <h4> instead

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ footer {
     padding: 1rem;
 }
 
-.detail {
-    margin-top: -0.5em;
-    color: #555;
+h4 {
+    font-size: 1.1rem;
+    margin: 0;
 }
