--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,12 @@ nav li {
     margin-right: 1rem;
 }
 
+.photo {
+    width: 150px;
+    float: left;
+    margin-right: 1rem;
+}
+
 section {
     margin-bottom: 2rem;
 }
@@ -57,4 +63,45 @@ h4 {
 .stick {
     margin-top: 0;
     margin-bottom: 0;
+}
+
+.slideshow-container {
+    position: relative;
+    max-width: 600px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.slide {
+    display: none;
+}
+
+.slide img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+    transition: 0.3s;
+    user-select: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
