--- a/css/style.css
+++ b/css/style.css
@@ -25,22 +25,27 @@ nav ul {
     padding: 0;
 }
 
+ul {
+    margin-top: 0em;
+}
+
 nav li {
     display: inline;
     margin: 0 10px;
 }
 
 .profile-photo {
-    width: 150px;
+    width: 25%;
     border-radius: 50%;
     float: left;
     margin-right: 1rem;
 }
 
 .photo {
-    width: 13rem;
+    width: 200px;
     float: left;
     margin-right: 1rem;
+    margin-bottom: 1rem;
 }
 
 section {
@@ -52,6 +57,11 @@ footer {
     font-size: 0.8rem;
     color: #888;
     padding: 1rem;
+}
+
+h2 {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 h4 {
@@ -67,9 +77,11 @@ h4 {
 
 .slideshow-container {
     position: relative;
-    max-width: 600px;
+    max-width: 500px;
     margin: auto;
     overflow: hidden;
+    aspect-ratio: 4 / 5;
+    margin-bottom: 1rem;
 }
 
 .slide {
@@ -104,4 +116,8 @@ h4 {
 
 .prev:hover, .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
+}
+
+hr {
+    margin: 0 0 0.5em 0;
 }
